--- a/pom.xml
+++ b/pom.xml
@@ -372,6 +372,18 @@
           </plugins>
         </pluginManagement>
       </build>
+	  <distributionManagement>
+        <repository>
+            <id>deployment</id>
+            <name>Releases</name>
+            <url>http://13.58.233.178:8081/nexus/content/repositories/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>deployment</id>
+            <name>Snapshot</name>
+            <url>http://13.58.233.178:8081/nexus/content/repositories/snapshots/</url>
+        </snapshotRepository>
+      </distributionManagement>
     </profile>
   </profiles>
 
