--- a/pom.xml
+++ b/pom.xml
@@ -361,6 +361,8 @@
         <pluginManagement>
           <plugins>
             <plugin>
+	      <artifactId>maven-deploy-plugin</artifactId>
+              <version>2.8.2</version>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
               <configuration>
